# lab3-dynimic-libs

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/include/: format_plugin.h  image.h  read_write_status.h  transform_utils.h  transformation_plugin.h
plugins/src/: image.c  transform_utils.c
plugins/src/format/: bmp_format.c
plugins/src/transform/: ccw90.c  cw90.c  fliph.c  flipv.c  none.c
solution/: CMakeLists.txt
solution/include/: bmp.h  bmp_utils.h  file_utils.h  image.h  image_utils.h  plugin.h  plugin_loader.h  read_write_status.h  transform.h
solution/src/: bmp.c  bmp_utils.c  file_utils.c  image.c  image_utils.c  main.c  plugin_loader.c  transform.c
tester/: tester.cmake
